--- a/ad-l3-1.0/style.css
+++ b/ad-l3-1.0/style.css
@@ -1,5 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
 html {
-    height: 100%;
-    width: 100%;
-  }
-  
+  height: 100%;
+  width: 100%;
+}
+
+body{
+  background-color: #8e8c8c;
+  font-family: Open Sans", serif;
+}
+
+h3{
+  color: greenyellow;
+}
+
+.subtitulosAzules{
+  color: #2c1fe6;
+}
+
+.subtituloRojo{
+  color: red;
+}
